--- a/client/lobby_phase1.html
+++ b/client/lobby_phase1.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>That's how Mifia works</title>
@@ -10,63 +9,98 @@
         </h1>
         <div class="lobby-layout">
             <div class="left">
-                <div class="box">
+                <div class="box game-listing-box">
                     <div class="upper-box">
-                        Azioni
+                        Partite aperte
+                    </div>
+                    <div class="middle-box">
+                        <div class="game-listing joinable">
+                            <div class="name">
+                                Steffo's game
+                            </div>
+                            <div class="status">
+                                10/16
+                            </div>
+                            <div class="join">
+                                <button>Join</button>
+                            </div>
+                        </div>
+                        <div class="game-listing not-joinable">
+                            <div class="name">
+                                Thatguy's game
+                            </div>
+                            <div class="status">
+                                In progress
+                            </div>
+                            <div class="join">
+                                <button>Started</button>
+                            </div>
+                        </div>
+                        <div class="game-listing joined">
+                            <div class="name">
+                                Mifia 15
+                            </div>
+                            <div class="status">
+                                11/16
+                            </div>
+                            <div class="join">
+                                <button>Waiting</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="lower-box">
-                        <button>Gioca!</button>
-                        <button>Dormi!</button>
+                        <button>Crea</button>
                     </div>
                 </div>
             </div>
             <div class="center">
-                <div class="chat-layout">
-                    <div class="box chat-box">
-                        <div class="upper-box">
-                            Chat
+                <div class="box chat-box">
+                    <div class="upper-box">
+                        Chat
+                    </div>
+                    <div class="middle-box">
+                        <div class="message">
+                            <div class="sender">Steffo</div>
+                            <div class="content">Qualcuno fa una partita?</div>
                         </div>
-                        <div class="middle-box">
-                            <div class="message">
-                                <div class="sender">Yu</div>
-                                <div class="content">Andiamo nel Midnight Channel stanotte?</div>
-                            </div>
-                            <div class="message">
-                                <div class="sender">Yosuke</div>
-                                <div class="content">Ok!</div>
-                            </div>
-                            <div class="message">
-                                <div class="sender">Chie</div>
-                                <div class="content">Solo se Yosuke non viene.</div>
-                            </div>
+                        <div class="message">
+                            <div class="sender">ciaociao</div>
+                            <div class="content">Io ci sto.</div>
                         </div>
-                        <div class="lower-box">
-                            <div class="new-message">
-                                <div class="sender">
-                                    Steffo
-                                </div>
-                                <div class="input">
-                                    <input type="text" placeholder="Messaggio qui.">
-                                </div>
-                                <div class="send">
-                                    <button>Invia!</button>
-                                </div>
+                        <div class="message">
+                            <div class="sender">Banana</div>
+                            <div class="content">k then</div>
+                        </div>
+                    </div>
+                    <div class="lower-box">
+                        <div class="message-box">
+                            <div class="sender">
+                                Steffo
+                            </div>
+                            <div class="input">
+                                <input type="text" placeholder="Messaggio qui.">
+                            </div>
+                            <div class="send">
+                                <button>Invia!</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="right">
-                <div class="box">
+                <div class="box connected-users-box">
                     <div class="upper-box">
                         Connessi
                     </div>
                     <div class="lower-box">
                         <ul>
-                            <li>Yu</li>
-                            <li>Yosuke</li>
-                            <li>Chie</li>
-                            <li>Yukiko</li>
+                            <li>Steffo</li>
+                            <li>ciaociao</li>
+                            <li>Banana</li>
+                            <li>PotatOS</li>
+                            <li>Tua mamma</li>
+                            <li>Il mifioso</li>
+                            <li>That guy</li>
                         </ul>
                     </div>
                 </div>
