Complete phase 3. More or less.

--- a/client/lobby_phase2.html
+++ b/client/lobby_phase2.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="react-app">
-            Loading React...
+            Now connecting...
         </div>
     </body>
 </html>
