scroll to bottom

--- a/client/lobby_phase2.html
+++ b/client/lobby_phase2.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="react-app">
-            Now connecting...
+            Loading game...
         </div>
     </body>
 </html>
